# Yolo_TRT_Cuvid

./: .gitignore  CMakeLists.txt  README.md  test.bat
NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
NvCodec/NvEncoder/: NvEncoder.h
Utils/: ColorSpace.cu  ColorSpace.h  FFmpegStreamer.h  NvCodecUtils.h
common/: logging.h
include/: Affine.h  Decode.h  FramePresenterD3D.h  FramePresenterD3D11.h  bbox_calculate.h  build_engine.h  yolov5_trt.h
src/: Affine.cu  Decode.cpp  DecodeStream.cpp  bbox_calculate.cu  main.cpp  yolov5_trt.cpp
thrid_lib/ffmpeg-win64-lgpl-shared/doc/: ffmpeg-all.html  ffplay-all.html  ffprobe-all.html
thrid_lib/ffmpeg-win64-lgpl-shared/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
thrid_lib/opencv4.7/: setup_vars_opencv4.cmd
thrid_lib/opencv4.7/include/opencv2/: opencv_modules.hpp
thrid_lib/opencv4.7/x64/vc17/lib/: OpenCVConfig.cmake
weights/Ada/: readme.txt
